--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2,12 +2,26 @@
 
 /* Estilos principais. */
 
+@font-face {
+    font-family: 'italiana';
+    src: url('../fonts/italiana.ttf') format('TrueType');
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: 'kirang';
+    src: url('../fonts/kirang_haerang.ttf') format('TrueType');
+}
+
 :root {
-    --primary-color: #311800;
+    --primary-color: #221000;
     --secundary-color: #EBD998;
     --highlight-color: #FAD012;
     --white: #fafafa;
+    --white2: #eeeeee;
     --black: #080808;
+    --radius: 15px;
+    --box-shadow: 2px 3px 8px 0px #0000004b;
 }
 
 * {
@@ -17,5 +31,166 @@
 }
 
 body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: var(--secundary-color);
+    overflow-x: hidden;
 }
+
+/* Cabeçalho */
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 4rem;
+    min-width: 22.2rem; /* 355px */
+    padding: 1rem;
+    font-family: 'kirang';
+    letter-spacing: 3px;
+    background-color: var(--primary-color);
+    color: var(--white);
+    box-shadow: var(--box-shadow);
+    border-bottom-right-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+}
+
+header h1 {
+    display: flex;
+    font-size: 2em;
+    font-weight: 100;
+}
+
+h1 img {
+    width: .8em;
+    transform: rotate(40deg);
+}
+
+.purchase-container {
+    position: relative;
+}
+
+.purchase {
+    width: 1.8em;
+}
+
+.items-quantity {
+    position: absolute;
+    bottom: 2px;
+    left: 1px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 0.8em;
+    color: var(--highlight-color);
+}
+
+/* Principal */
+
+.tutorial-text-container {
+    width: 90%;
+    font-family: 'italiana';
+    padding: 1rem;
+    margin: auto;
+}
+
+.tutorial-text-container h1 {
+    text-decoration: underline;
+    font-size: 1.5em;
+}
+
+.tutorial-text-container p {
+    font-size: 1.2em;
+    margin: .2em 0 0 .8em;
+}
+
+/* Carrossel */
+
+section.carousel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+    height: 15em;
+    margin: auto;
+    margin-bottom: 3rem;
+    background-color: var(--primary-color);
+    border-radius: 15px;
+    box-shadow: var(--box-shadow);
+    overflow: hidden;
+}
+
+#items-imgs-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#items-imgs-container img {
+    margin: 0 1em;
+    width: 14em;
+}
+
+.pagination-dots {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 7em;
+    margin-top: 1.5rem;
+}
+
+.dot {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 14px;
+    height: 14px;
+    background-color: #eeeeee;
+    border-radius: 50%;
+}
+
+.marked-dot::after {
+    content: '';
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: var(--highlight-color);
+}
+
+/* Menu */
+
+section.menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80vh;
+    background-color: #000000;
+}
+
+.menu img {
+    width: 90%;
+    height: 23em;
+    margin-bottom: 2rem;
+}
+
+/*  */
+
+#contact-us img {
+    position: fixed;
+    bottom: 4rem;
+    right: .5rem;
+    width: 3em;
+    box-shadow: var(--box-shadow);
+    border-radius: 2rem;
+}
+
+/* Rodapé */
+
+footer {
+    width: 100%;
+    height: 4rem;
+    background-color: var(--primary-color);
+    color: var(--white);
+    margin-top: 2rem;
+    box-shadow: var(--box-shadow);
+}
+
