--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -108,25 +108,34 @@ section.carousel {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 95%;
-    height: 15em;
+    width: 100%;
+    height: 18em;
     margin: auto;
     margin-bottom: 3rem;
     background-color: var(--primary-color);
-    border-radius: 15px;
     box-shadow: var(--box-shadow);
     overflow: hidden;
 }
 
-#items-imgs-container {
+#imgs-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 0 3rem;
+    overflow-y: hidden;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    scroll-snap-stop: always;
+    scroll-snap-type: x mandatory;
+    /* scrollbar-width: none; */
 }
 
-#items-imgs-container img {
-    margin: 0 1em;
-    width: 14em;
+#imgs-container img {
+    width: 17em;
+    margin: 0 0.6rem;
+    transition: transform 3s;
+    scroll-snap-align: center;
 }
 
 .pagination-dots {
@@ -134,7 +143,7 @@ section.carousel {
     align-items: center;
     justify-content: space-between;
     width: 7em;
-    margin-top: 1.5rem;
+    margin-top: .8rem;
 }
 
 .dot {
@@ -193,4 +202,6 @@ footer {
     margin-top: 2rem;
     box-shadow: var(--box-shadow);
 }
+
+/* Estilos dinâmicos */
 
