--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,10 +30,14 @@
     padding: 0;
 }
 
+html, body {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: var(--secundary-color);
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 /* Cabeçalho */
@@ -58,6 +62,7 @@ header h1 {
     display: flex;
     font-size: 2em;
     font-weight: 100;
+    margin-left: 1em;
 }
 
 h1 img {
@@ -109,40 +114,35 @@ section.carousel {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 18em;
-    margin: auto;
+    padding: 1em 0;
     margin-bottom: 3rem;
     background-color: var(--primary-color);
     box-shadow: var(--box-shadow);
-    overflow: hidden;
 }
 
 #imgs-container {
     display: flex;
-    align-items: center;
     justify-content: flex-start;
     width: 100%;
-    padding: 0 3rem;
-    overflow-y: hidden;
+    transition: 1s transform;
     overflow-x: auto;
-    scroll-behavior: smooth;
     scroll-snap-stop: always;
     scroll-snap-type: x mandatory;
-    /* scrollbar-width: none; */
 }
 
 #imgs-container img {
-    width: 17em;
-    margin: 0 0.6rem;
+    width: 95%;
+    margin: 0 1em;
     transition: transform 3s;
     scroll-snap-align: center;
 }
 
+
 .pagination-dots {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 7em;
+    gap: .5rem;
+    width: fit-content;
     margin-top: .8rem;
 }
 
