--- a/docs/index.css
+++ b/docs/index.css
@@ -164,6 +164,8 @@ section.carousel {
     justify-content: center;
     height: 70%;
     width: 20%;
+    background-color: #ffffff00;
+    border: none;
 }
 
 .left-arrow-container {
